# sensitive-info-mcp

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
skills/sensitive-info-scan/: SKILL.md
src/sensitive_info_mcp/: __init__.py  scanner.py  server.py  types.py
src/sensitive_info_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sensitive_info_mcp/detectors/: __init__.py  ai.py  base.py  rules.py
src/sensitive_info_mcp/maskers/: __init__.py  processor.py
tests/: test_core.py
