[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensitive-info-mcp"
version = "0.1.0"
description = "AI-powered sensitive information detection and data masking MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcus" }]
keywords = ["mcp", "data-masking", "pii", "security", "gdpr", "desensitization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0", "httpx>=0.25.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
sensitive-info-mcp = "sensitive_info_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
